# agent-runtime

./: .clippy.toml  .gitignore  Cargo.toml  README.md  rust-toolchain.toml
crates/agent-chat/: Cargo.toml
crates/agent-chat/src/: context.rs  error.rs  events.rs  lib.rs  runner.rs  snapshot.rs  state.rs  tests.rs  types.rs
crates/agent-chat/src/tests/: fixtures.rs  runner.rs  state.rs
crates/agent-chat/tests/: chat_agent_capabilities_e2e.rs
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: app.rs  cancellation.rs  catalog.rs  chat.rs  cli.rs  config.rs  debug_bundle.rs  eval.rs  lib.rs  main.rs  metrics.rs  otel_export.rs  proposal.rs  registry.rs  replay.rs  runtime_config.rs  runtime_server.rs  runtime_stores.rs  schema_validation.rs  server.rs  session.rs  stdio_protocol.rs  tools.rs  trace_store.rs  tui.rs
crates/agent-cli/src/app/: cli_input.rs  entrypoint.rs  infrastructure.rs  mod.rs  proposal.rs  trace_store.rs
crates/agent-cli/src/app/entrypoint/: args.rs  dispatch.rs
crates/agent-cli/src/commands/: catalog.rs  compat.rs  llm.rs  mod.rs  proposal.rs  run.rs  session.rs  tool.rs  workflow.rs
crates/agent-cli/src/devtools/: debug_bundle.rs  dev_stdio.rs  eval.rs  metrics.rs  mod.rs  shell_tool_host.rs
crates/agent-cli/src/devtools/debug_bundle/: artifacts.rs  export.rs  io.rs  redaction.rs  trace_records.rs  types.rs
crates/agent-cli/src/devtools/eval/: expectations.rs  io.rs  runner.rs  scoring.rs  trace.rs  types.rs
crates/agent-cli/src/interfaces/: mod.rs  runtime_server.rs  server.rs
crates/agent-cli/src/interfaces/runtime_server/: chat.rs  construction.rs  proposals.rs  runs.rs  sessions.rs  types.rs
crates/agent-cli/src/interfaces/server/: chat.rs  core.rs  proposals.rs  runs.rs  sessions.rs  stdio.rs  support.rs  tools.rs
crates/agent-cli/src/tools/: error.rs  http.rs  manifest.rs  mcp.rs  process.rs
crates/agent-cli/src/tui/: approval.rs  chat.rs  chat_events.rs  commands.rs  completion.rs  data.rs  format.rs  layout.rs  policy.rs  render.rs  runtime.rs  terminal.rs  test_support.rs  theme.rs  tool_inventory.rs
crates/agent-cli/src/tui/commands/: actions.rs  arguments.rs  dispatch.rs  presentation.rs
crates/agent-cli/src/tui/data/: loading.rs  models.rs  state.rs
crates/agent-cli/src/tui/data/state/: input.rs  lifecycle.rs  navigation.rs
crates/agent-cli/src/tui/render/: approval_overlay.rs  frame.rs  input.rs  selection.rs  styles.rs  transcript.rs
crates/agent-cli/src/tui/terminal/: mouse.rs
crates/agent-cli/src/tui/tests/: commands.rs  data.rs  render.rs  terminal.rs
crates/agent-cli/src/tui/tests/commands/: agents.rs  events.rs  inventory.rs  proposals.rs  runs.rs  shell.rs  tools.rs  workflow.rs
crates/agent-cli/src/tui/tests/terminal/: approval.rs  completion.rs  mouse.rs
crates/agent-cli/tests/: catalog_cli.rs  cli.rs  contracts.rs
crates/agent-cli/tests/cli/: catalog.rs  compat.rs  config_profiles.rs  config_stores.rs  debug_bundle.rs  eval.rs  llm.rs  metrics.rs  proposal_approvals.rs  proposal_lifecycle.rs  proposal_policy.rs  recovery.rs  replay.rs  run.rs  server_chat.rs  server_core.rs  server_proposals.rs  server_runs.rs  server_sessions.rs  suite.rs  support.rs  telemetry.rs  tools.rs  tui.rs  validation.rs  workflow.rs
crates/agent-cli/tests/contracts/: suite.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: catalog.rs  context.rs  embedded.rs  errors.rs  hooks.rs  ids.rs  interaction.rs  lib.rs  proposal.rs  run.rs  services.rs  session.rs  stores.rs  tool.rs  trace.rs
crates/agent-llm/: Cargo.toml
crates/agent-llm/src/: lib.rs  mock.rs  sse.rs  structured.rs  tests.rs  types.rs  usage.rs
crates/agent-llm/src/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
crates/agent-llm/src/providers/anthropic/: mapping.rs  provider.rs  sse.rs  types.rs
crates/agent-llm/src/providers/openai/: mapping.rs  provider.rs  sse.rs  types.rs
crates/agent-llm/src/tests/: anthropic.rs  mock.rs  ollama.rs  openai.rs
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: execution_support.rs  hooks.rs  lib.rs  lock.rs  loop_core.rs  observability.rs  policy.rs  recovery.rs  registry.rs  runner.rs  scheduler.rs  services.rs  subagent.rs  tests.rs  trace.rs  workflow.rs
crates/agent-runtime/src/loop_core/: effects.rs  mod.rs  tests.rs  transition.rs  validation.rs
crates/agent-runtime/src/runner/: attempts.rs  control.rs  execution.rs  idempotency.rs  mod.rs  scheduling.rs
crates/agent-runtime/src/runner/workflow/: execution.rs
crates/agent-runtime/src/tests/: hooks.rs  idempotency.rs  lifecycle.rs  locking.rs  mod.rs  observability.rs  recovery.rs  scheduler.rs  subagent.rs  workflow.rs
crates/agent-runtime/tests/: agent_capabilities_e2e.rs
crates/agent-store/: Cargo.toml
crates/agent-store/src/: file.rs  lib.rs  memory.rs  sqlite.rs  testkit.rs  tests.rs  util.rs
crates/agent-store/src/file/: io.rs  lock.rs  proposal.rs  run.rs  session.rs  trace.rs
crates/agent-store/src/sqlite/: codec.rs  events.rs  lock.rs  mod.rs  proposal.rs  run.rs  session.rs  state.rs  trace.rs
crates/agent-store/src/tests/: concurrency.rs  conformance.rs  locks.rs  migrations.rs  mod.rs  persistence.rs  support.rs
crates/agent-store/tests/: testkit.rs
crates/agent-tools/: Cargo.toml
crates/agent-tools/src/: error.rs  http.rs  lib.rs  manifest.rs  mcp.rs  process.rs  tests.rs
evals/: catalog_dry_run.yaml  proposal_expectation.yaml  tool_call_sequence.yaml
examples/: shell-tool-source.json
openapi/: agent-runtime-api.yaml
schemas/: agent-spec.schema.json  approval-decision.schema.json  catalog.schema.json  chat-resume-request.schema.json  chat-tool-result.schema.json  chat-turn-event.schema.json  chat-turn-request.schema.json  chat-turn-snapshot.schema.json  chat-turn-state.schema.json  debug-artifact-materializations.schema.json  debug-artifact-resolvers.schema.json  debug-bundle-manifest.schema.json  debug-replay-config.schema.json  debug-state-snapshot.schema.json  embedded-run-snapshot.schema.json  embedded-run-step.schema.json  eval-case.schema.json  trace.schema.json  (+21 more)
(+167 files in other folders)
