[workspace]
resolver = "2"
members = [
  "crates/agent-core",
  "crates/agent-runtime",
  "crates/agent-store",
  "crates/agent-llm",
  "crates/agent-chat",
  "crates/agent-cli",
]

[workspace.package]
edition = "2024"
license = "UNLICENSED"
repository = "https://github.com/naviwealth/agent-runtime"
rust-version = "1.96"

[workspace.dependencies]
agent-core = { path = "crates/agent-core" }
agent-chat = { path = "crates/agent-chat" }
agent-llm = { path = "crates/agent-llm" }
agent-runtime = { path = "crates/agent-runtime" }
agent-store = { path = "crates/agent-store" }
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.9"
blake3 = "1.8.5"
camino = { version = "1.2.4", features = ["serde1"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
crossterm = "0.29.0"
fs-err = { version = "3.3.0", features = ["tokio"] }
futures = "0.3.32"
jsonschema = "0.46.6"
miette = { version = "7.6.0", features = ["fancy"] }
ratatui = "0.30.2"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "stream"] }
schemars = { version = "1.2.1", features = ["derive", "preserve_order"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
serde_yaml = "0.9"
tempfile = "3.27.0"
thiserror = "2.0.18"
time = { version = "0.3.51", features = ["formatting", "parsing", "serde", "serde-well-known"] }
tokio = { version = "1.52.3", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
toml = "1.1.2"
uuid = { version = "1.23.4", features = ["serde", "v7"] }
walkdir = "2.5.0"
