[package]
name = "agent-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
agent-chat.workspace = true
agent-core.workspace = true
agent-llm.workspace = true
agent-runtime.workspace = true
agent-store = { workspace = true, features = ["sqlite"] }
agent-tools.workspace = true
async-trait.workspace = true
axum.workspace = true
blake3.workspace = true
camino.workspace = true
clap.workspace = true
crossterm.workspace = true
fs-err.workspace = true
futures.workspace = true
jsonschema.workspace = true
miette.workspace = true
ratatui.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unicode-width.workspace = true
walkdir.workspace = true

[dev-dependencies]
assert_cmd = "2.2.2"
